--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ install:
 - docker pull ${DOCKERIMAGE}
 - docker tag  ${DOCKERIMAGE} ci:current
 - docker run  --env=OPAMYES --init -id --name=CI -v ${TRAVIS_BUILD_DIR}:/home/coq/${CONTRIB} -w /home/coq/${CONTRIB} ci:current
-- docker exec CI /bin/bash --login -c "opam update -y"
-- docker exec CI /bin/bash --login -c "opam pin add -n -y -k path coq-mathcomp-${CONTRIB}.dev ."
-- docker exec CI /bin/bash --login -c "opam install --deps-only coq-mathcomp-${CONTRIB}"
+- docker exec CI /bin/bash --login -c "opam repo add coq-released https://coq.inria.fr/opam/released"
+- docker exec CI /bin/bash --login -c "opam repo add coq-extra-dev https://coq.inria.fr/opam/extra-dev"
+# - docker exec CI /bin/bash --login -c "opam pin add -y -n coq-mathcomp-${CONTRIB} ."
+- docker exec CI /bin/bash --login -c "opam install --deps-only ."
 
 script:
-- docker exec CI /bin/bash --login -c "opam install -vvv coq-mathcomp-${CONTRIB}"
+- docker exec CI /bin/bash --login -c "opam install -vvv ."
